# ChangeLog for dev-python/Djblets
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/Djblets/ChangeLog,v 1.21 2013/12/09 02:51:27 creffett Exp $

*Djblets-0.7.25 (09 Dec 2013)

  09 Dec 2013; Chris Reffett <creffett@gentoo.org> +Djblets-0.7.25.ebuild:
  Security bump wrt bug 490242. Remove test functionality (no longer included in
  tarball as of 0.7.19).

  24 Jun 2013; Ian Delaney <idella4@gentoo.org> Djblets-0.7.15.ebuild:
  correction to dep

*Djblets-0.7.15 (15 Jun 2013)

  15 Jun 2013; Ian Delaney <idella4@gentoo.org> +Djblets-0.7.15.ebuild,
  +files/exclude-tests.patch, Djblets-0.6.22.ebuild, Djblets-0.7.14.ebuild:
  revbump, migrate -> distutils-r1, bump, patch to exclude tests from install,
  add all req'd deps, closes Bug No.s 470990 473088"

  09 Jun 2013; Mike Gilbert <floppym@gentoo.org> Djblets-0.6.22.ebuild,
  Djblets-0.7.14.ebuild:
  Depend on virtual/python-imaging.

*Djblets-0.7.14 (10 May 2013)

  10 May 2013; Patrick Lauer <patrick@gentoo.org> +Djblets-0.7.14.ebuild,
  -Djblets-0.7.ebuild, Djblets-0.6.22.ebuild:
  Bump and minor cleanups

  14 Jan 2013; Ian Delaney <idella4@gentoo.org> +files/sample.rss,
  Djblets-0.6.22.ebuild:
  Support for py2.5 dropped due to test failure, support for multiple 'impls'
  set in favour of setting active py2, DEPEND upgraded to cater to tests, mising
  test file sample.rss added to files/ to cater to tests, test phase added, test
  suites files removed in src_install to avoid file collisions

*Djblets-0.7 (03 Aug 2012)
*Djblets-0.6.22 (03 Aug 2012)

  03 Aug 2012; Michael Weber <xmw@gentoo.org> +Djblets-0.6.22.ebuild,
  +Djblets-0.7.ebuild, -Djblets-0.6.19.ebuild, -Djblets-0.6.20.ebuild:
  Version bumps to latest 0.6.* and 0.7, drop old

*Djblets-0.6.20 (03 Aug 2012)

  03 Aug 2012; Michael Weber <xmw@gentoo.org> +Djblets-0.6.20.ebuild:
  Version bump (thanks euscan)

  05 Jul 2012; Michael Weber <xmw@gentoo.org> -Djblets-0.6.14.ebuild: