@@ -3,22 +3,14 @@ Hash: SHA256
 
 AUX exclude-tests.patch 753 SHA256 07f3ffe87701ec87a47c529a92fb122283f800c4aa6e7ee5d2e0af3c897712f0 SHA512 3052d90dec0f3503bbcb6f51804ca6a1fcc4490a370064234d1d22b7fe90d80c394665ca733322798f4a28308c53dc4272cad362f1a99fcc4a96e54747eb06d6 WHIRLPOOL c749e5eabd413ebedbe021e025f9fc140452e58ba77c1b112a5eaabefce1f71622e6e32a9c008dc84b975598c562ab3c4ce1ffd808bb0aa254e92f4f5489fc7b
 AUX sample.rss 5949 SHA256 9290b6309bcbc3d0f2270bc1b972e22643f4134ac7ab730148334aba3c21e872 SHA512 8588b33407e8d6b885d522218bd3635aa078b99756b28a141292acb8746236d517693eabbd375a0918734a913fa8ef60855df199ad0fad4bdfc22e602b186a1b WHIRLPOOL 19fc35c451807ba7ad0006feba0209abbbfb7d325f3a6f9f335093b2623c85e0f1d34d4bc69c7db84490289fbf5dab7ed6184a372fee388acad157f6a996ee48
-DIST Djblets-0.6.22.tar.gz 282291 SHA256 bf4ac722cbf27228be3fee7a943b90e15786249f664832faa0b907a27dea2a0d SHA512 00818b9f2189ca1289be1c2c7b8e2a5ac250acba2ce6dfec26df90dd2e3322da14a2b6c0755749e8bc225e2c50093740a1c6903d0a9bda6c8c0e787d06265199 WHIRLPOOL 9f4790e6a006983258304df06c1d71c127295b9812be14db79ccf22d1ed8afef0d73617c9f7bb939091a4176a9a7b32f134afe935400db0724e92fd6db6430cb
-DIST Djblets-0.7.14.tar.gz 437782 SHA256 4ce081030e07ddfac2fd65c745d5d644b46aae708734ebdfa2f59a2be81657c9 SHA512 9d7880fccbcaf67bb441776da0820a884a07ba51e3e542b198e67bb0a07d527ecb8a24eb792b1f0f75b17f013dbc3c6e85f252f7bfb047a4076ce0cbb8c17690 WHIRLPOOL 1033cf306e045b1277d6e007e0dc2707d162cdb85859949570b7979090917378ab714d64d8eef6178c66324382e10063345dbae210b989ca7fcb1984ec28be7a
-DIST Djblets-0.7.15.tar.gz 438027 SHA256 f67b2bf820a20e8614e50ca518fdf0cbe5de4ab7244f9b7f098343aa07bfee5f SHA512 9cda061d2127ad43add727527e7356d0198a1bd8c2248f5eb7018761e186b5255ecc6533c208ec34c644596128fb33e2bef646a829358cf11e4b525047542b40 WHIRLPOOL 6a30691f6cb40ac8c8752775a2ecc5d6cd877bc28bd9e69f0f989526a96bc34e0743f1985ed85ddedbee7b457b759aef57fc8c05facc34bbb5d13e6e0c680ca0
-DIST Djblets-0.7.25.tar.gz 448665 SHA256 67e893ea97761c70ef48d1f9f9b21baa42ff2f63c0fa6bdf90dc1abeedba3b77 SHA512 49cae11a571aac088b10240976a4d5737e026fd5724a027c059aeec5904f98169931fd02090fc42975e3d687f155862ce3527ec2b15730ab69f3136928531f54 WHIRLPOOL 77ce61019d13aefa65704db1dfd050360a856bdb61f92a917b4d16ef1c308cf92aa26ea8321778aeff6155cf5ec9d853550ec84cee600f401a6eac18e1168e50
-EBUILD Djblets-0.6.22.ebuild 1533 SHA256 7350dde57ff39cb58b0f96082ea44ea7e521402e0db46e0436a6e34ad0ed8b13 SHA512 4300badae6dfae3d985751ec964e6cad093067c2ba4eb46e35e4539a98235e25699ec76c1ebdcd327674cc6bf88c5e6d11322517f8522c4a0c2449071160e737 WHIRLPOOL 6885a71bd2a0de5e928c803b7439b5b1a1c692c283787ee562998fb4df3aee6185a57918c6e34c175b0bdf4139300d5705738558263b71398dabe97fe659b53b
-EBUILD Djblets-0.7.14.ebuild 1532 SHA256 ead29195756137eec7f961032534f86f886b23012fae0820e369dcf0b97235f4 SHA512 84abc172aae94250e6f5e5508046ac76ad8f60c9ba99394746555b8235a1c8314f71633e84aee9a238c931b04eff39cfbcbdb0467ffd4269dbebaada8c628513 WHIRLPOOL edeff0a09b321c415266d9ced5b0b3e85feccc47364198a873fae6cfec54536d6008bc6611f2254fd7dce9abe1e28872511705aded5fd537a0a80bda7c1a4b96
-EBUILD Djblets-0.7.15.ebuild 1473 SHA256 85089099fc581099ca2879e2402964a8f890c3f4445eb6183336f7183d06642f SHA512 0c1834bb5de9575863cce70e771603e9db1f842f28d44b6bb0ab191eabe1b2612f06f50cf5015b7e38d312286da28749ef36469a08c0ffa04b4f7744607812a8 WHIRLPOOL d53528fe967cddab85b8f79208844ad6d027b0ba1e3f22c1b91cf8d84e1fa7cc5cbd798d3fcfd45ac2ab401428ac142ef302554abdb78a287c5eaf091b443546
-EBUILD Djblets-0.7.25.ebuild 939 SHA256 a532552506ed05f7b45dea8f41b56a8927dfc0b1b84990ea191222d4e29a47e6 SHA512 17851cd792a7c585d225e73ac8423fd8cb1a6687e81270ca118b5cd1bf1250fab6fe0c1946c87d3c57de49884c39ed7d6593fce16b7868f1e3c839b09a085719 WHIRLPOOL 0ecc1d4c1d9e5996a7a1bd121cdfc27f290d52bb23011273255a49f45e513d67a8298a025b6d5074d38a034c9ba43a0c1bcd0a7b33477c0935bf43f7ffd7fd9e
-MISC ChangeLog 3381 SHA256 3079fa8ba6554d1842a13696ffdc2aba23ec49745ef34f2da03586542ff1cb24 SHA512 466a5de3cc9653a6c2fde314cb533890decfbdb0e8af2e8b3998782dbe93bf1392dd0cda07809ecd5fb1236ffff7006264a7ac85e3efe434fe88252b019c1709 WHIRLPOOL 48bac39cf12ed3f381d711b9869497f6c76fa2fdf324a7088630fe822ceda8ac857d77c9e52a519fa051efc34f3b72ca8a7f0a4c3fa17e54111b37246a10e871
+DIST Djblets-0.7.28.tar.gz 450682 SHA256 364c951a1838bd83d3b868b33672fc390adb49b8dc5f74a38045f3b38118000d SHA512 1d0dcfadf412b03c2a15060c182f40447bdea5e2ff1d59259b418d74ef55d823b513675c51ebb3b12bcbdc9c17ef3ecc05ad545f7adba7bd817450097d391870 WHIRLPOOL 454778e54fbd6f855f77a36bc86eb81edcdbff3349f931915d7fe3a0eff3d33932154fdb295f92b5b81e2e0e178aa2d28590f3d05fdb3acdca0ad9984b31970d
+EBUILD Djblets-0.7.28.ebuild 938 SHA256 1e2f3a6edfaa478a29f7ac5946e6c2875e2ffb180cc21ab03c161f6ceea6f311 SHA512 6945e6e3804f78ebc61ca0cfb072b67915283536849f74ab54bcc6730e561833ef66d5cbbb5cdc5b7a12a1a76b3b35ec40f238ef58813927a3378b4e7385edd8 WHIRLPOOL ca6ca339746b8026bc7f6bdd4479651d08bbd66ca9b71a8b5f614d6e54bd5cbfb564106919f526a8635e469c84170ae5849581c1100de68b7b937cbb2cb3eeab
+MISC ChangeLog 3605 SHA256 42e634165197cde587ffbbe4714c25a7c9655e639743cbe4f4411415df975a0a SHA512 e707c4dfebce42d72b9a3124d459367cdd076f86ee449890ce70a28be3aa5213914c543335c5027083d50d9c8ae025e308208386395dfc89d44f4188c9ae7839 WHIRLPOOL 253ab2f2f0704804fde732fbd6e0d5ee66bd910eacf4faa90e00814d32e08cdfb28469b99e55dd72931902e8acaea6464f849711c1836035a3e221378c5d3da6
 MISC metadata.xml 223 SHA256 89097f936927d56068988263e382edb683f359b27293955708e9ade4d256220d SHA512 c9f6a48b2aa05afdf73b8bd824c65480d76e54b659ca39928398c66f764d34faf186255d8aea034737424a962cf35151b610d078a01f8193b027c63e1e3c51b5 WHIRLPOOL 1ce20c98a7e177b8f510ef41f3935b0db5e04b2ecf465a683b2f2515f6a3043c33e6e9efc87f5aaaf59b2ed9be376d9d16bc8beff66b11aaa50ea899bfdc1f62
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iKYEAREIAGYFAlKlMDVfFIAAAAAALgAoaXNzdWVyLWZwckBub3RhdGlvbnMub3Bl
-bnBncC5maWZ0aGhvcnNlbWFuLm5ldEM2NzU5RjUyMDczREJDQkVDQTBDRkE1NERC
-Nzk1QThBNDI2MTgzNTQACgkQ23laikJhg1QnTwCfVXkO3MdcSAXHJJDDf6xdoJMo
-0xYAn1ku88HFohQRVi9tsPU9ufM/LvLe
-=vbiP
+iEYEAREIAAYFAlNJ/7UACgkQso7CE7gHKw2H9wCcCWybFbuQnrdzxy4tMwU8xxPB
+t80AniUCQO4R8oUuTq1NzJ3wU3aYNYz3
+=1+ft
 -----END PGP SIGNATURE-----
