@@ -1,12 +1,0 @@
-DEFINED_PHASES=compile install postinst postrm prepare setup test
-DEPEND=dev-python/django virtual/python-imaging test? ( dev-python/django-pipeline dev-python/django-evolution >=dev-python/django-1.4.1 ) || ( =dev-lang/python-2.7* =dev-lang/python-2.6* )
-DESCRIPTION=A collection of useful extensions for Django
-EAPI=4
-HOMEPAGE=http://github.com/djblets/djblets
-KEYWORDS=~amd64 ~x86
-LICENSE=MIT
-RDEPEND=dev-python/django virtual/python-imaging || ( =dev-lang/python-2.7* =dev-lang/python-2.6* )
-SLOT=0
-SRC_URI=http://downloads.reviewboard.org/releases/Djblets/0.6/Djblets-0.6.22.tar.gz
-_eclasses_=distutils	34e0f373c466bb0e97ba194735f1acf2	eutils	af81d52c25ec93fbdff71e0efb0de7b7	multilib	fac675dcccf94392371a6abee62d909f	python	be9965681d83c3980660a2660ac95e95	toolchain-funcs	48b38a216afb92db6314d6c3187abea3	versionator	a8a3963967d6140be9a14b08bb8f047f
-_md5_=43172f49a480c51fc4228bfa7810a655
