@@ -1,6 +1,13 @@
 # ChangeLog for dev-python/Djblets
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/Djblets/ChangeLog,v 1.21 2013/12/09 02:51:27 creffett Exp $
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-python/Djblets/ChangeLog,v 1.22 2014/04/13 03:15:56 idella4 Exp $
+
+*Djblets-0.7.28 (13 Apr 2014)
+
+  13 Apr 2014; Ian Delaney <idella4@gentoo.org> +Djblets-0.7.28.ebuild,
+  -Djblets-0.6.22.ebuild, -Djblets-0.7.14.ebuild, -Djblets-0.7.15.ebuild,
+  -Djblets-0.7.25.ebuild:
+  bumped and cleaned
 
 *Djblets-0.7.25 (09 Dec 2013)
 
